# Buscaminas

./: .gitignore  README.md
Cliente/: build.xml
Cliente/nbproject/: genfiles.properties  project.properties
Cliente/src/: App.java
Cliente/src/modules/: ClientServer.java
Server/: package-lock.json  package.json
Server/src/: app.ts
Server/src/presentation/: ServerTCP.ts
Server/src/presentation/board/: GameBoard.ts
Servidor/: .gitignore  CMakeLists.txt  README.md  app.cpp  conanfile.txt  test.cpp
Servidor/presentation/: Server.cpp  Server.hpp
Servidor/presentation/Game/: GameBoard.cpp  GameBoard.hpp  GameController.cpp  GameController.hpp  cronometer.cpp
Servidor/presentation/Services/: file-service.cpp  file-service.hpp  game-service.cpp  game-service.hpp
Servidor/presentation/Services/Records/: easy.txt
